tests/lean/weirdmacro.lean.expected.out
weirdmacro.lean:1:6: error: expected no space before ':' or string literal
weirdmacro.lean:1:0-1:5: error: unexpected syntax
  failed to pretty print term (use 'set_option pp.rawOnError true' for raw representation)
weirdmacro.lean:1:30-1:32: error: elaboration function for 'antiquot' has not been implemented
weirdmacro.lean:1:32: error: expected command
weirdmacro.lean:3:7-3:11: error: unknown identifier 'term'
